--- a/itis3135/project/search.html
+++ b/itis3135/project/search.html
@@ -13,11 +13,10 @@
   <body>
     <main>
       <form id="search-form">
-     <input type="text" id="query" placeholder="Search for a book">
-     <button type="submit" onclick="search()">Search</button>
-   </form>
-   <div id="books"></div>
-
+  <input type="text" id="search" />
+  <input type="button" value="Submit" id="submit" onclick="search1()">
+  </form>
+  <div id="search-results"></div>
     </main>
   </body>
 </html>
