--- a/itis3135/project/search.html
+++ b/itis3135/project/search.html
@@ -16,7 +16,7 @@
   <input type="text" id="search" />
   <input type="button" value="Submit" id="submit" onclick="search1()">
   </form>
-  <div id="search-results"></div>
+  <div id="books"></div>
     </main>
   </body>
 </html>
