--- a/itis3135/project/book.html
+++ b/itis3135/project/book.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title></title>
 
+      <script src="scripts/script.js">
 
+      </script>
       <link rel="stylesheet" href="styles/pagestyles.css">
   </head>
   <body>
@@ -120,8 +122,21 @@
 
     </div>
 
-
-
       <script src="script.js"></script>
+      <footer>
+        <nav>
+          <ul>
+            <li><a href="https://mavedave6.github.io/itis3135/createwithdavid.co/index.html">createwithdavid.co</a></li>
+            <li><a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
+              <img src="img/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
+            </a></li>
+            <li><a href="https://jigsaw.w3.org/css-validator/check/referer"
+            id = "validation_link_css">
+             <img src="img/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+            </a></li>
+          </ul>
+        </nav>
+
+      </footer>
   </body>
 </html>
