--- a/itis3135/project/incoming.html
+++ b/itis3135/project/incoming.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Book Website</title>
+  <title>Incoming</title>
   <!-- jQuery and jQuery UI -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
@@ -73,7 +73,18 @@
 
   </main>
   <footer>
-    <p>Copyright 2021 Book Website</p>
+    <nav>
+      <ul>
+        <li><a href="https://mavedave6.github.io/itis3135/createwithdavid.co/index.html">createwithdavid.co</a></li>
+        <li><a href="https://validator.w3.org/check?uri=referer" id = "validation_link_html">
+          <img src="img/button_validation_html5.png" width="88" height="31" alt="Validate webpage HTML."/>
+        </a></li>
+        <li><a href="https://jigsaw.w3.org/css-validator/check/referer"
+        id = "validation_link_css">
+         <img src="img/button_validation_css.png" width="88" height="31" alt="Validate webpage CSS." />
+        </a></li>
+      </ul>
+    </nav>
   </footer>
 </body>
 </html>
