--- a/itis3135/project/about.html
+++ b/itis3135/project/about.html
@@ -5,11 +5,11 @@
     <title>About Page</title>
     <link rel="stylesheet" href="styles/pagestyles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-		<script src="scripts/ajaxsection1.js"></script>
+		<script src="scripts/ajax.js"></script>
   </head>
   <body>
     <header>
-      <h1>Welcome to D-Collections</h1>
+      <h1 class="welcs">Welcome to D-Collections</h1>
       <div class="navigation">
       <nav role="navigation" class="navigation-items">
         <a href="https://mavedave6.github.io/itis3135/project/index.html">Home</a>
