--- a/itis3135/project/about.html
+++ b/itis3135/project/about.html
@@ -5,7 +5,15 @@
     <title>About Page</title>
     <link rel="stylesheet" href="styles/pagestyles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-		<script src="scripts/ajax.js"></script>
+		<script>
+
+    $(document).ready(function(){
+        $("#button").click(function(){
+          $("#about-intro").load("scripts/david.txt");
+        });
+      });
+
+</script>
   </head>
   <body>
     <header>
