--- a/itis3135/project/book.html
+++ b/itis3135/project/book.html
@@ -27,7 +27,7 @@
 
     <div class="container">
 
-    <p>Click each book to see a short description below.</p>
+    <h2>Welcome to the library!. Click Any book to see a short description below.</h2>
 
       <div class="books">
 
