--- a/itis3135/project/incoming.html
+++ b/itis3135/project/incoming.html
@@ -33,6 +33,11 @@
   </header>
 
   <main>
+    <br>
+    <br>
+    <br>
+    <h2>This wepage was created so my fellow readers can follow me full time and know what to expect when next the website is updated! </h2>
+
     <section id="featured-books">
       <div class="featured_books">
         <h2 class="hfb">Featured Books</h2>
